--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,56 +1,50 @@
-# This is a basic workflow to help you get started with Actions
+ 
+name: Sample CI CD Pull Request CI
 
-name: Sample CI CD Workflow
-
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
-  push:
-    branches: [ master ]
   pull_request:
-    branches: [ master ]
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+    branches:
+      - 'master'
+      - 'release*'
+# Um workflow é composto de um ou mais Jobs que podem ser executados sequencialmente ou em paralelo
 jobs:
-  # This workflow contains a single job called "build"
+  # Este Workflow contém dois Jobs chamados "test" e "build-and-deploy"
   test:
     name: Run Unit Tests
-
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    # O tipo de runner em que o job será executado
+    runs-on: ubuntu-latest  
+    # Steps representam a sequencia de tarefas usando o shell runners que serão executadas como parte do Job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-
+    - uses: actions/checkout@v1
+    #  Step para instalar o NDK
     - name: set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    #  Step para rodar testes unitários
     - name: Unit tests
-      run: bash ./gradlew test --stacktrace
-      
+      run: ./gradlew test --stacktrace
+  
   build-and-generate-apk:
-    # The type of runner the job will run on
+    # O tipo de runner em que o job será executado
     runs-on: ubuntu-latest
-    # Steps represent the sequence of tasks using shell runners that will be executed as part of the Job
+    # Steps representam a sequencia de tarefas usando o shell runners que serão executadas como parte do Job
     steps:
     - uses: actions/checkout@v1
-    # Step to Configure the JDK
+    # Step para Configurar o JDK
     - name: set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8       
-    # Step to install the NDK
+    #  Step para instalar o NDK
     - name: Install NDK
       run: echo "y" | sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;20.0.5594570"
-    # Step to Build the Project and generate the APK
+    # Step para Buildar o Projeto e gerar a APK
     - name: Build Debug 
       run: ./gradlew assembleDebug
-    # Step to save the APK as Artifacts
-    - name: Upload APK on Build Artifacts
+    # Step para salvar a APK como Artifact
+    - name: Upload APK on Github Artifact
       uses: actions/upload-artifact@v1
       with:
         name: app
-        path: app/build/outputs/apk/debug/app-debug.apk 
+        path: app/build/outputs/apk/prod/debug/app-prod-debug.apk 
