--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,4 @@
- 
-name: Sample CI CD Pull Request CI
+name: Sample Request CI
 
 on:
   pull_request:
@@ -39,7 +38,6 @@ jobs:
     #  Step para instalar o NDK
     - name: Install NDK
       run: echo "y" | sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;20.0.5594570"
-    
     # Step para Buildar o Projeto e gerar a APK
     - name: Build Debug 
       run: ./gradlew assembleDebug
