--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,49 +1,57 @@
-name: Sample Request CI
 
+# This is a basic workflow to help you get started with Actions
+
+name: Sample CI CD Workflow
+
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the master branch
 on:
+  push:
+    branches: [ master ]
   pull_request:
-    branches:
-      - 'master'
-      - 'release*'
-# Um workflow é composto de um ou mais Jobs que podem ser executados sequencialmente ou em paralelo
+    branches: [ master ]
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # Este Workflow contém dois Jobs chamados "test" e "build-and-deploy"
+  # This workflow contains a single job called "build"
   test:
     name: Run Unit Tests
-    # O tipo de runner em que o job será executado
-    runs-on: ubuntu-latest  
-    # Steps representam a sequencia de tarefas usando o shell runners que serão executadas como parte do Job
+
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - uses: actions/checkout@v1
-    #  Step para instalar o NDK
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v2
+
     - name: set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    #  Step para rodar testes unitários
     - name: Unit tests
-      run: ./gradlew test --stacktrace
-  
+      run: bash ./gradlew test --stacktrace
+      
   build-and-generate-apk:
-    # O tipo de runner em que o job será executado
+    # The type of runner the job will run on
     runs-on: ubuntu-latest
-    # Steps representam a sequencia de tarefas usando o shell runners que serão executadas como parte do Job
+    # Steps represent the sequence of tasks using shell runners that will be executed as part of the Job
     steps:
     - uses: actions/checkout@v1
-    # Step para Configurar o JDK
+    # Step to Configure the JDK
     - name: set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8       
-    #  Step para instalar o NDK
+    # Step to install the NDK
     - name: Install NDK
       run: echo "y" | sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;20.0.5594570"
-    # Step para Buildar o Projeto e gerar a APK
+    # Step to Build the Project and generate the APK
     - name: Build Debug 
       run: ./gradlew assembleDebug
-    # Step para salvar a APK como Artifact
-    - name: Upload APK on Github Artifact
+    # Step to save the APK as Artifacts
+    - name: Upload APK on Build Artifacts
       uses: actions/upload-artifact@v1
       with:
         name: app
-        path: app/build/outputs/apk/prod/debug/app-prod-debug.apk 
+        path: app/build/outputs/apk/debug/app-debug.apk 
