--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -44,8 +44,11 @@ jobs:
     - name: Install NDK
       run: echo "y" | sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;20.0.5594570"
 
+    - name: Build
+      run: ./gradlew build 
+
      # step to build release build 
-    - name: Build Release 
+    - name: Assemble Release 
       uses: r0adkll/sign-android-release@v1
       with:
            releaseDirectory: app/build/outputs/apk/release
